--- a/loginServer/login/src/main/webapp/WEB-INF/web.xml
+++ b/loginServer/login/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,25 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  
+  <context-param>
+		<param-name>MysqlDriver</param-name>
+		<param-value>com.mysql.cj.jdbc.Driver</param-value>
+	</context-param>
+	
+	<context-param>
+		<param-name>MysqlURL</param-name>
+		<param-value>jdbc:mysql://localhost:15411/test?useUnicode=true&amp;serverTimezone=Asia/Seoul</param-value>
+	</context-param>
+	
+	<context-param>
+		<param-name>MysqlUSER</param-name>
+		<param-value>root</param-value>
+	</context-param>
+	
+	<context-param>
+		<param-name>MysqlPW</param-name>
+		<param-value>1234</param-value>
+	</context-param>
+  
 </web-app>
