--- a/loginServer/login/pom.xml
+++ b/loginServer/login/pom.xml
@@ -48,6 +48,14 @@
     <version>2.3.1</version>
 </dependency>
 
+	<!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+	<dependency>
+	    <groupId>redis.clients</groupId>
+	    <artifactId>jedis</artifactId>
+	    <version>2.9.0</version>
+	</dependency>
+
+
 
   </dependencies>
 
