--- a/loginServer/login/src/main/webapp/WEB-INF/web.xml
+++ b/loginServer/login/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,11 @@
+<!--   
 <!DOCTYPE web-app PUBLIC
  "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
+ -->
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:web="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd" id="WebApp_ID" version="5.0">
 
-<web-app>
+<!--  <web-app> -->
   <display-name>Archetype Created Web Application</display-name>
   
   <context-param>
@@ -12,7 +15,7 @@
 	
 	<context-param>
 		<param-name>MysqlURL</param-name>
-		<param-value>jdbc:mysql://localhost:15411/test?useUnicode=true&amp;serverTimezone=Asia/Seoul</param-value>
+		<param-value>jdbc:mysql://localhost:15412/board?useUnicode=true&amp;serverTimezone=Asia/Seoul</param-value>
 	</context-param>
 	
 	<context-param>
